--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel api dev:next",
     "dev:next": "next dev --turbopack -p 9002",
-    "api": "json-server --watch db.json --port 5000 --routes routes.json",
+    "api": "json-server --watch db.json --port 5000",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
